--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
