--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8777
 spring.application.name=CanteenProject
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/canteen_proj
+spring.datasource.url=jdbc:mysql://localhost:3306/divya_canteen
 spring.datasource.username=root
 spring.datasource.password=
 
